--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "eleventy",
+    "start": "eleventy --serve"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/NGPetrovich/mini-games/issues"
   },
-  "homepage": "https://github.com/NGPetrovich/mini-games#readme"
+  "homepage": "https://github.com/NGPetrovich/mini-games#readme",
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.0"
+  }
 }
